# cmake-demo

Demo1/: CMakeLists.txt  main.cc
Demo2/: CMakeLists.txt
Demo3/: CMakeLists.txt
Demo4/: CMakeLists.txt
Demo5/: CMakeLists.txt
Demo6/: CMakeLists.txt
Demo7/: CMakeLists.txt
Demo8/: CMakeLists.txt
